# job_search_agent

./: .env.example  CLAUDE.md  README.md  main.py  pipeline.py  pyproject.toml  test_resume.txt
code_generated_from_prompt/: .env.example  README.md  pipeline.py  prompts.txt  requirements.txt  session_transfer_document.md  session_transfer_document4.md  session_transfer_document_1.md  session_transfer_document_2.md  session_transfer_document_3.md
tests/: fakes.py  test_claude_client.py  test_cli.py  test_config.py  test_contact_discovery.py  test_integration.py  test_job_scorer.py  test_job_searcher.py  test_llm_protocol.py  test_message_generator.py  test_notion_writer.py  test_pipeline.py  test_pipeline_state.py  test_resume_loader.py  test_resume_parser.py  test_resume_profile.py
