[tool.pytest.ini_options]
pythonpath = ["."]

[project]
name = "job-search-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "anthropic>=0.94.0",
    "apify-client>=2.5.0",
    "mistune>=3.2.0",
    "notion-client>=3.0.0",
    "pymupdf>=1.27.2.2",
    "pytest>=9.0.3",
]
